2008-09-24  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidanski)
	* finalize.c (GC_general_register_disappearing_link): Remove
	redundant code.
	* gcj_mlc.c (GC_init_gcj_malloc): Add cast to signed.
	* os_dep.c: (GC_write_fault_handler): Remove remaining
	references to deleted variable "code".  Remove redundant
	FREEBSD definitions.
	* include/private/gcconfig.h (GWW_VDB): Define for X86_64 when
	defined for X86. (STATIC): Define as "static" with NO_DEBUGGING.

2008-09-24  Hans Boehm <Hans.Boehm@hp.com>
	* include/private/gc_priv.h: Update MAX_HEAP_SECTS.

2008-09-10  Hans Boehm <Hans.Boehm@hp.com>
	* dbg_mlc.c (GC_print_smashed_obj): Increase robustness with
	smashed string, (GC_debug_free_inner): Mark as free.
	* mallocx.c (GC_malloc_many): Always clear new block if
	GC_debugging_started.
	* reclaim.c: Move GC_debugging_started from
	GC_reclaim_small_nonempty_block() to GC_reclaim_generic(),
	which is also called directly.
	* doc/README: Fix spelling error.  Update license summary.
	* include/gc.h (GC_PRE_INCR3, GC_POST_INCR3): add (void **) casts.
	* tests/test.c: Don't define GC_DEBUG if already defined.

2008-08-27  Hans Boehm <Hans.Boehm@hp.com>
	* doc/simple_example.html: update --enable-full-debug reference,
	Make HTML formatting standards compliant.
	* doc/debugging.html, doc/leak.html: Fix HTML formatting bugs.
	* doc/gcinterface.html: specify encoding.

2008-08-27  Hans Boehm <Hans.Boehm@hp.com> (with help from Marco Maggi)
	* doc/simple_example.html: Update thread-local allocation
	description.

2008-08-26  Hans Boehm <Hans.Boehm@hp.com> (with help from Marco Maggi)
	* configure.ac: Check for gc-debug earlier; replace remaining
	full-debug tests.
	* configure: Regenerate.
	* include/gc.h, ptr_chck.c (GC_pre_incr, GC_post_incr):
	Use signed offset type.  Use ptr_t internally.
	* doc/gcinterface.html: Update LOCAL_MALLOC description.
	* doc/README.autoconf, doc/leak.html, doc/README.DGUX386:
	Fix full-debug reference.